--- a/Day3Assign/Day3Assign/Views/Product/Create.cshtml
+++ b/Day3Assign/Day3Assign/Views/Product/Create.cshtml
@@ -10,20 +10,56 @@
 		<div class="form-group">
 			<label for="name">Product Name</label>
 			<input type="text" class="form-control font-weight-bold" id="name" name="pname">
+			@if (!ViewData.ModelState.IsValid)
+			{
+		<div class="alert alert-danger alert-dismissible fade show" role="alert">
+			@Html.ValidationMessage("pname")
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+			}
 		</div>
 		<div class="form-group">
 			<label for="pid1">Product ID</label>
 			<input type="text" class="form-control font-weight-bold" id="pid1" name="pid">
+			@if (!ViewData.ModelState.IsValid)
+			{
+		<div class="alert alert-danger alert-dismissible fade show" role="alert">
+			@Html.ValidationMessage("pid")
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+			}
 		</div>
 
 		<div class="form-row">
 			<div class="form-group col-md-6">
 				<label for="price1">Price</label>
 				<input type="number" class="form-control font-weight-bold" id="price1" name="price">
+				@if (!ViewData.ModelState.IsValid)
+				{
+			<div class="alert alert-danger alert-dismissible fade show" role="alert">
+				@Html.ValidationMessage("price")
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+				}
 			</div>
 			<div class="form-group col-md-6">
 				<label for="stock1">Stock</label>
 				<input type="number" class="form-control font-weight-bold" id="stock1" name="stock">
+				@if (!ViewData.ModelState.IsValid)
+				{
+			<div class="alert alert-danger alert-dismissible fade show" role="alert">
+				@Html.ValidationMessage("stock")
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+				}
 			</div>
 		</div>
 
